# codemem

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DOLT_REMOTE.md  README.md  SECURITY.md  biome.json  docker-compose.dogfood.yml  docker-compose.e2e.yml  dpnp14bjrpm1pkbvgvjksno0egcuhqha  drizzle.config.ts  index.js  manifest  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  rdqnmdjfhaspv1orb5vhjerkjlrhdbbt  tsconfig.base.json  tsconfig.json  vitest.config.ts
.beads/: .beads-credential-key  .gitignore  .migration-hint-ts  config.yaml  dolt-server.activity  interactions.jsonl  issues.jsonl  issues.jsonl.backup.20260301182232  metadata.json
.claude-plugin/: marketplace.json
.github/: PULL_REQUEST_TEMPLATE.md
.opencode/: lib  plugin  plugins  tests
codemem/: __init__.py  claude_hooks.py  cli_app.py  config.py  coordinator_api.py  coordinator_invites.py  coordinator_store.py  db.py  ingest_sanitize.py  mcp_server.py  memory_kinds.py  observer.py  observer_anthropic.py  observer_auth.py  observer_consumer.py  plugin_ingest.py  raw_event_flush.py  release_version.py  sync_api.py  sync_runtime.py  viewer.py  viewer_raw_events.py
docs/: anchor-peer-deployment.md  architecture.md  cli-design-conventions.md  cloudflare-coordinator-deployment.md  coordinator-cloudflare-deployment.md  coordinator-deployment.md  coordinator-discovery.md  coordinator-e2e-runbook.md  feature-gap-audit.md  migration-python-to-ts.md  nas-pi4-benchmark.md  plugin-reference.md  remote-mcp-oauth.md  remote-mcp-partner-v1.md  rename-migration.md  sync-provenance.md  trusted-publisher.md  user-guide.md  versioning.md
e2e/: README.md
opencode_mem/: __init__.py  classifier.py  cli.py  cli_app.py  config.py  mcp_server.py  observer.py  observer_auth.py  observer_codex.py  observer_config.py  plugin_ingest.py  store.py  summarizer.py  sync_api.py  sync_auth.py  sync_daemon.py  sync_discovery.py  viewer.py  viewer_html.py  viewer_http.py  viewer_raw_events.py
scripts/: benchmark-runtime.mjs  bump-version.sh  dev.sh  release-tag-preflight.sh  release-version.mjs  (+3 more)
(+319 files in other folders)
