[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["codemem"]

[tool.hatch.build.targets.wheel.force-include]
".opencode/plugin/codemem.js" = "codemem/.opencode/plugin/codemem.js"
".opencode/lib/compat.js" = "codemem/.opencode/lib/compat.js"

[tool.hatch.build.targets.sdist]
include = [
  "codemem/",
  ".opencode/plugin/codemem.js",
  ".opencode/lib/compat.js",
]

[project]
name = "codemem"
version = "0.19.0"
description = "Persistent memory layer for OpenCode CLI with MCP server and wrapper capture"
authors = [{name = "OpenCode", email = "hello@opencode.dev"}]
requires-python = ">=3.11,<3.15"
dependencies = [
  "typer>=0.12",
  "rich>=13.7",
  "mcp>=1.2",
  "openai>=1.0",
  "sqlite-vec>=0.1.6",
  "fastembed>=0.3.6",
  "zeroconf>=0.132.2",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.8",
]

[project.scripts]
codemem = "codemem.cli:main"
codemem-mcp = "codemem.mcp_server:run"

[tool.uv]
# Override fastembed's pillow<12.0 cap to resolve CVE-2026-25990 (GHSA-cfh3-3jmp-rvhc).
# fastembed main has uncapped pillow (PR #611) but no release yet.
# Remove this override once fastembed >= 0.7.5 ships with the relaxed constraint.
override-dependencies = ["pillow>=12.1.1"]

[tool.pytest.ini_options]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
  "E",      # pycodestyle errors
  "W",      # pycodestyle warnings
  "F",      # pyflakes
  "I",      # isort
  "UP",     # pyupgrade
  "B",      # flake8-bugbear
  "SIM",    # flake8-simplify
]
ignore = [
  "E501",   # line too long (handled by formatter)
  "B008",   # function call in argument defaults (required by typer)
]

[tool.ruff.lint.isort]
known-first-party = ["codemem"]

[tool.coverage.run]
source = ["codemem"]
branch = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
]
